--- a/rps.html
+++ b/rps.html
@@ -5,8 +5,6 @@
         <title>rock-paper-scissors</title>
     </head>
     <body>
-        <script>
-            
-        </script>
+        <script src="rps.js"> </script>
     </body>
 </html>
