--- a/rps.html
+++ b/rps.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="rps.js" defer> </script>
+
         <meta charset="UTF-8">
         <title>rock-paper-scissors</title>
     </head>
     <body>
-        <script src="rps.js"> </script>
+        <header><h1><span id="fireTxt">Fire</span><span id="waterTxt">Water</span><span>Grass</span></h1></header>
+        <div class="container">
+        <button class="button" id="rock"><img img src="fire.png"></button>
+        <button class="button" id="scissors"><img img src="grass.jpg"></button>
+        <button class="button" id="paper"><img img src="water.png"></button>
+    </div>
     </body>
 </html>
