Make tekst to display who wins each round

--- a/rps.html
+++ b/rps.html
@@ -9,7 +9,9 @@
     <body>
         <header><h1><span id="fireTxt">Fire</span><span id="waterTxt">Water</span><span id="grassTxt">Grass</span></h1></header>
         <div class="container">
-
+            <div class="container">
+                <h2 id="element">Choose your element!<h2>
+                </div>
         </div>
         <div class="container">
         <button class="button" id="rock"><img img src="fire.png"></button>
@@ -20,8 +22,11 @@
         <button class="evilbutton" id="evilscissors"><img img src="grass.jpg"></button>
         <button class="evilbutton" id="evilpaper"><img img src="water.png"></button>
     </div>
-    <div id="textBox" class="container">
-        <p id="combatTxt">Choose your element!</p>
-    </div>
+    
+       
+        <div id="textBox">
+            <p id="testi"> Lalalalalallala</p>
+        </div>
+  
     </body>
 </html>
