Fix button backgrounds

--- a/rps.html
+++ b/rps.html
@@ -21,9 +21,9 @@
         <button class="button" id="scissors"><img img src="grass.jpg"></button>
         <button class="button" id="paper"><img img src="water.png"></button>
         <p id="vs">V.S</p>
-        <button class="evilbutton" id="evilrock"><img img src="fire.png"></button>
-        <button class="evilbutton" id="evilscissors"><img img src="grass.jpg"></button>
-        <button class="evilbutton" id="evilpaper"><img img src="water.png"></button>
+        <button class="evilbutton" style="background-color:white" id="evilrock"><img img src="fire.png"></button>
+        <button class="evilbutton" style="background-color:white" id="evilscissors"><img img src="grass.jpg"></button>
+        <button class="evilbutton" style="background-color:white" id="evilpaper"><img img src="water.png"></button>
     </div>
         <div id="textBox">
             <p id="pChoice" class="gameTxt"> </p>
